--- a/printer.cfg
+++ b/printer.cfg
@@ -1,8 +1,5 @@
 ## Voron Design VORON2 300 SKR 1.4 TMC2209 UART config
-
-[include klicky-probe.cfg]
-[include z_calibration.cfg]
-[include nozzle_scrub.cfg]
+[include /macros/*]
 [include mainsail.cfg]
 
 [mcu]
