--- a/OLD/printer-20210929_193733.cfg
+++ b/OLD/printer-20210929_193733.cfg
@@ -434,8 +434,7 @@ gcode:
     BED_MESH_CALIBRATE
     #BED_MESH_PROFILE LOAD=default 
     M109 S{EXTRUDER} ; preheat nozzle
-    CLEAN_NOZZLE
-    CALIBRATE_Z 
+    #CALIBRATE_Z 
     CLEAN_NOZZLE
      
 
@@ -473,7 +472,7 @@ gcode:
 #*# pid_kd = 387.956
 #*#
 #*# [stepper_z]
-#*# position_endstop = -0.802
+#*# position_endstop = -0.732
 #*#
 #*# [extruder]
 #*# control = pid
@@ -486,21 +485,23 @@ gcode:
 #*# [bed_mesh default]
 #*# version = 1
 #*# points =
-#*# 	-0.020000, -0.015000, 0.022500, -0.027500, -0.037500
-#*# 	0.002500, 0.037500, 0.027500, -0.010000, -0.025000
-#*# 	0.045000, 0.047500, 0.000000, 0.010000, -0.027500
-#*# 	0.005000, 0.040000, 0.045000, -0.015000, -0.022500
-#*# 	-0.050000, -0.035000, -0.035000, -0.050000, -0.085000
+#*# 	  -0.070000, -0.015000, -0.012500, -0.027500, -0.005000, -0.020000, -0.055000
+#*# 	  -0.027500, -0.015000, -0.012500, 0.002500, -0.010000, -0.027500, -0.015000
+#*# 	  -0.010000, -0.007500, 0.035000, 0.002500, 0.007500, -0.007500, -0.022500
+#*# 	  -0.027500, -0.005000, 0.007500, 0.000000, 0.005000, -0.030000, -0.010000
+#*# 	  -0.012500, 0.005000, 0.002500, 0.005000, -0.020000, -0.035000, -0.030000
+#*# 	  -0.047500, -0.005000, 0.005000, -0.005000, 0.000000, -0.030000, -0.035000
+#*# 	  -0.085000, -0.077500, -0.070000, -0.050000, -0.067500, -0.060000, -0.057500
 #*# tension = 0.2
 #*# min_x = 40.0
 #*# algo = bicubic
-#*# y_count = 5
+#*# y_count = 7
 #*# mesh_y_pps = 2
 #*# min_y = 40.0
-#*# x_count = 5
-#*# max_y = 260.0
+#*# x_count = 7
+#*# max_y = 259.96
 #*# mesh_x_pps = 2
-#*# max_x = 260.0
+#*# max_x = 259.96
 #*#
 #*# [bed_mesh 7X7]
 #*# version = 1
