--- a/OLD/printer-20210929_194249.cfg
+++ b/OLD/printer-20210929_194249.cfg
@@ -434,8 +434,7 @@ gcode:
     BED_MESH_CALIBRATE
     #BED_MESH_PROFILE LOAD=default 
     M109 S{EXTRUDER} ; preheat nozzle
-    CLEAN_NOZZLE
-    CALIBRATE_Z 
+    #CALIBRATE_Z 
     CLEAN_NOZZLE
      
 
@@ -473,7 +472,7 @@ gcode:
 #*# pid_kd = 387.956
 #*#
 #*# [stepper_z]
-#*# position_endstop = -0.802
+#*# position_endstop = 0.997
 #*#
 #*# [extruder]
 #*# control = pid
@@ -486,11 +485,11 @@ gcode:
 #*# [bed_mesh default]
 #*# version = 1
 #*# points =
-#*# 	-0.020000, -0.015000, 0.022500, -0.027500, -0.037500
-#*# 	0.002500, 0.037500, 0.027500, -0.010000, -0.025000
-#*# 	0.045000, 0.047500, 0.000000, 0.010000, -0.027500
-#*# 	0.005000, 0.040000, 0.045000, -0.015000, -0.022500
-#*# 	-0.050000, -0.035000, -0.035000, -0.050000, -0.085000
+#*# 	  -0.020000, -0.015000, 0.022500, -0.027500, -0.037500
+#*# 	  0.002500, 0.037500, 0.027500, -0.010000, -0.025000
+#*# 	  0.045000, 0.047500, 0.000000, 0.010000, -0.027500
+#*# 	  0.005000, 0.040000, 0.045000, -0.015000, -0.022500
+#*# 	  -0.050000, -0.035000, -0.035000, -0.050000, -0.085000
 #*# tension = 0.2
 #*# min_x = 40.0
 #*# algo = bicubic
