--- a/macros/z_calibration.cfg
+++ b/macros/z_calibration.cfg
@@ -18,7 +18,7 @@ probe_switch_y: 277
 #   of the configured bed_mesh. It will raise an error if there is no
 #   probe_bed site and no bed_mesh with a relative_reference_index
 #   configured.
-switch_offset: 0.37
+switch_offset: 0.45
 #   The trigger point offset of the used klicky switch.
 #   This needs to be fined out manually. More on this later
 #   in this section..
@@ -45,7 +45,7 @@ clearance: 10
 position_min: -5
 #   Minimum valid distance (in mm) used for probing move. The
 #   default is from the Z rail configuration.
-speed: 100
+speed: 200
 #   The moving speed in X and Y. The default is 50 mm/s.
 #lift_speed: 100
 #   Speed (in mm/s) of the Z axis when lifting the probe between
@@ -82,6 +82,9 @@ end_gcode: Dock_Probe
 [gcode_macro CALIBRATE_Z]
 rename_existing: BASE_CALIBRATE_Z
 gcode:
-    M117 Z-Calibration..
+    G28
+    LOWERCURRENT
+    ATTACH_PROBE
     BASE_CALIBRATE_Z
-    M117
+    DOCK_PROBE
+    RESETCURRENT
