--- a/printer.cfg
+++ b/printer.cfg
@@ -260,12 +260,12 @@ pin: ^z:P0.10
 x_offset: 0
 y_offset: 21.00
 z_offset: 6.42
-speed: 5
-samples:3 
+speed: 3
+samples:4
 samples_result: median
-sample_retract_dist: 3.0
-samples_tolerance: 0.01
-samples_tolerance_retries: 3
+sample_retract_dist: 2.0
+samples_tolerance: 0.008
+samples_tolerance_retries: 4
 
 
 #####################################################################
@@ -312,13 +312,13 @@ fan_speed: .3
 # 	LED Control
 #####################################################################
 
-#[output_pin caselight]
+[output_pin caselight]
 # Chamber Lighting - Bed Connector (Optional)
-#pin: P2.5
-#pwm:true
-#shutdown_value: 0
-#value:1
-#cycle_time: 0.01
+pin: P2.5
+pwm:true
+shutdown_value: 0
+value:1
+cycle_time: 0.01
 
 #####################################################################
 # 	Homing and Gantry Adjustment Routines
