--- a/macros/macros.cfg
+++ b/macros/macros.cfg
@@ -1,3 +1,101 @@
+#####################################################################
+# 	Macros
+#####################################################################
+
+# 	Homing and Gantry Adjustment Routines
+
+
+#[safe_z_home]
+##	XY Location of the Z Endstop Switch
+##	Update -10,-10 to the XY coordinates of your endstop pin 
+##	(such as 157,305) after going through Z Endstop Pin
+##	Location Definition step.
+#home_xy_position:207,300
+#speed:100
+#z_hop:10
+
+[quad_gantry_level]
+##	Use QUAD_GANTRY_LEVEL to level a gantry.
+##	Min & Max gantry corners - measure from nozzle at MIN (0,0) and 
+##	MAX (250, 250), (300,300), or (350,350) depending on your printer size
+##	to respective belt positions
+
+
+	
+##	Gantry Corners for 300mm Build
+##	Uncomment for 300mm build
+gantry_corners:
+	-60,-10
+	360,370
+##	Probe points
+points:
+	50,25
+	50,225
+	250,225
+	250,25
+
+speed: 100
+horizontal_move_z: 20
+retries: 5
+retry_tolerance: 0.01
+max_adjust: 10
+
+
+[bed_mesh]
+speed: 300
+horizontal_move_z: 20
+mesh_min: 40, 40
+mesh_max: 260,260
+fade_start: 0.6
+fade_end: 10.0
+probe_count: 5,5
+algorithm: bicubic
+relative_reference_index: 12
+
+
+
+[gcode_macro G32]
+gcode:
+    BED_MESH_CLEAR
+    G28
+    QUAD_GANTRY_LEVEL
+    g28
+
+    ##	Uncomment for 300 build
+    #G0 X150 Y150 Z30 F3600
+    
+    #--------------------------------------------------------------------
+   
+[gcode_macro PRINT_START]
+gcode:
+    G32                            ; home all axes
+    G1 Z25 F3000                   ; move nozzle up
+    BED_MESH_CLEAR
+    M190 S{BED}  ; Preheat bed
+    #M109 S{EXTRUDER} ; preheat nozzle
+    BED_MESH_CALIBRATE
+    #BED_MESH_PROFILE LOAD=default 
+    M109 S{EXTRUDER} ; preheat nozzle
+    CLEAN_NOZZLE
+    CALIBRATE_Z 
+    CLEAN_NOZZLE
+     
+
+[gcode_macro PRINT_END]
+#   Use PRINT_END for the slicer ending script - please customise for your slicer of choice
+gcode:
+    M400                           ; wait for buffer to clear
+    G92 E0                         ; zero the extruder
+    G1 E-10.0 F3600                ; retract filament
+    G91                            ; relative positioning
+    G0 Z1.00 X20.0 Y20.0 F20000    ; move nozzle to remove stringing
+    TURN_OFF_HEATERS
+    M107                           ; turn off fan
+    G1 Z2 F3000                    ; move nozzle up 2mm
+    G90                            ; absolute positioning
+    G0  X125 Y250 F3600            ; park nozzle at rear
+    BED_MESH_CLEAR
+
 ######################### SAFETY #########################
 
 # Lower z stepper current (in case of crash). Referenced in my klicky homing overrides and in calibrate_z.
