thermal testing part2

--- a/printer.cfg
+++ b/printer.cfg
@@ -256,6 +256,10 @@ max_temp: 120
 #pid_ki: 2.347
 #pid_kd: 363.769
 
+[idle_timeout]
+timeout: 3600
+
+
 #####################################################################
 # 	Probe
 #####################################################################
