added single probe script, new print start

--- a/printer.cfg
+++ b/printer.cfg
@@ -272,7 +272,7 @@ z_offset: 6.42
 speed: 10 #framesag testing
 lift_speed: 10.0
 #samples:4 #standard
-samples:2 #frame sag testing
+samples:3 #frame sag testing
 samples_result: median
 sample_retract_dist: 2.0
 samples_tolerance: 0.008
@@ -310,7 +310,7 @@ kick_start_time: 0.5
 heater: heater_bed
 heater_temp: 45.0
 
-#[heater_fan exhaust_fan]
+[heater_fan exhaust_fan]
 ##	Exhaust fan - Z board, HE0 Connector
 pin: z:P2.7
 max_power: 1.0
@@ -318,7 +318,7 @@ shutdown_speed: 0.0
 kick_start_time: 5.0
 heater: heater_bed
 heater_temp: 60
-fan_speed: .3
+fan_speed: .2
 
 #####################################################################
 # 	LED Control
@@ -392,42 +392,3 @@ gcode:
 #*#
 #*# [probe]
 #*#
-#*# [bed_mesh default]
-#*# version = 1
-#*# points =
-#*# 	-0.025000, -0.006250, 0.002500, 0.001250, -0.040000
-#*# 	0.003750, 0.035000, 0.040000, -0.007500, -0.002500
-#*# 	0.012500, 0.018750, 0.000000, 0.005000, -0.017500
-#*# 	0.017500, 0.057500, 0.040000, 0.035000, 0.000000
-#*# 	-0.028750, -0.002500, -0.002500, 0.000000, -0.013750
-#*# tension = 0.2
-#*# min_x = 40.0
-#*# algo = bicubic
-#*# y_count = 5
-#*# mesh_y_pps = 2
-#*# min_y = 40.0
-#*# x_count = 5
-#*# max_y = 260.0
-#*# mesh_x_pps = 2
-#*# max_x = 260.0
-#*#
-#*# [bed_mesh 7X7]
-#*# version = 1
-#*# points =
-#*# 	-0.085000, -0.050000, -0.040000, -0.045000, -0.057500, -0.057500, -0.060000
-#*# 	-0.057500, -0.020000, -0.012500, -0.015000, -0.027500, -0.037500, -0.062500
-#*# 	-0.027500, -0.005000, -0.002500, -0.005000, -0.012500, -0.027500, -0.035000
-#*# 	-0.042500, -0.007500, 0.002500, 0.000000, -0.007500, -0.030000, -0.042500
-#*# 	-0.035000, -0.015000, -0.005000, -0.010000, -0.020000, -0.032500, -0.040000
-#*# 	-0.045000, -0.017500, 0.000000, -0.002500, -0.015000, -0.035000, -0.042500
-#*# 	-0.095000, -0.057500, -0.050000, -0.057500, -0.072500, -0.085000, -0.087500
-#*# tension = 0.2
-#*# min_x = 40.0
-#*# algo = bicubic
-#*# y_count = 7
-#*# mesh_y_pps = 2
-#*# min_y = 40.0
-#*# x_count = 7
-#*# max_y = 259.96
-#*# mesh_x_pps = 2
-#*# max_x = 259.96
