--- a/macros/macros.cfg
+++ b/macros/macros.cfg
@@ -75,9 +75,25 @@ gcode:
     ##	Uncomment for 300 build
     #G0 X150 Y150 Z30 F3600
     
-    #--------------------------------------------------------------------
-   
+ 
+#--------------------------------------------------------------------
 [gcode_macro PRINT_START]
+gcode:
+  g28 ; home all
+  G0 X150 Y150 Z30 F3600 ; park above center of bed
+  BED_MESH_CLEAR
+  m104 s{175} ;get nozzle to 175 while the bed does its thing
+  M190 S{BED}  ; Preheat bed  
+  M109 S{EXTRUDER} ; preheat nozzle
+  CLEAN_NOZZLE
+  G28;REHOME
+  QUAD_GANRY_LEVEL
+  BED_MESH_CALIBRATE
+  CLEAN_NOZZLE
+  CALIBRATE_z
+
+
+[gcode_macro PRINT_START_old]
 gcode:
     G32                            ; home all axes
     G1 Z25 F3000                   ; move nozzle up
@@ -107,9 +123,9 @@ gcode:
     G0  X125 Y250 F3600            ; park nozzle at rear
     BED_MESH_CLEAR
 
-
-#[gcode_macro zcalibration]
-#CALIBRATE_Z
+[gcode_macro zcalibration]
+gcode:
+    CALIBRATE_Z
 ######################### SAFETY #########################
 
 # Lower z stepper current (in case of crash). Referenced in my klicky homing overrides and in calibrate_z.
