still fighting with z_calibration

--- a/macros/macros.cfg
+++ b/macros/macros.cfg
@@ -50,7 +50,7 @@ max_adjust: 10
 # Bed Mesh - meeasure thermal behavior
 [bed_mesh]
 speed: 300
-horizontal_move_z: 10
+horizontal_move_z: 20
 mesh_min: 40,40
 mesh_max: 260,260
 probe_count: 7,7
@@ -87,7 +87,7 @@ gcode:
   M109 S{EXTRUDER} ; preheat nozzle
   CLEAN_NOZZLE
   G28;REHOME
-  QUAD_GANRY_LEVEL
+  QUAD_GANTRY_LEVEL
   BED_MESH_CALIBRATE
   CLEAN_NOZZLE
   CALIBRATE_z
