--- a/printer.cfg
+++ b/printer.cfg
@@ -268,14 +268,12 @@ pin: ^z:P0.10
 x_offset: 0
 y_offset: 21.00
 z_offset: 6.42
-#speed: 5
-speed: 10 #framesag testing
+speed: 4
 lift_speed: 10.0
-#samples:4 #standard
-samples:3 #frame sag testing
+samples:3
 samples_result: median
-sample_retract_dist: 2.0
-samples_tolerance: 0.008
+sample_retract_dist: 1.0
+samples_tolerance: 0.0075
 #samples_tolerance_retries: 4
 samples_tolerance_retries: 10 #frame sag testing
 
