--- a/OLD/printer-20211007_194917.cfg
+++ b/OLD/printer-20211007_194917.cfg
@@ -257,7 +257,7 @@ max_temp: 120
 #pid_kd: 363.769
 
 [idle_timeout]
-timeout: 7200
+timeout: 3600
 
 
 #####################################################################
@@ -380,7 +380,7 @@ gcode:
 #*# pid_kd = 387.956
 #*#
 #*# [stepper_z]
-#*# position_endstop = -0.417
+#*# position_endstop = -0.317
 #*#
 #*# [extruder]
 #*# control = pid
@@ -389,3 +389,24 @@ gcode:
 #*# pid_kd = 90.086
 #*#
 #*# [probe]
+#*#
+#*# [bed_mesh default]
+#*# version = 1
+#*# points =
+#*# 	  -0.050000, -0.052500, -0.045000, -0.025000, -0.035000, -0.037500, -0.030000
+#*# 	  -0.050000, -0.037500, -0.027500, -0.020000, -0.020000, -0.010000, -0.037500
+#*# 	  -0.000000, 0.002500, 0.010000, -0.002500, -0.005000, -0.012500, -0.020000
+#*# 	  -0.042500, 0.007500, -0.002500, 0.000000, -0.007500, -0.027500, -0.032500
+#*# 	  -0.027500, 0.000000, 0.005000, -0.017500, -0.012500, -0.037500, -0.030000
+#*# 	  -0.017500, -0.007500, 0.000000, 0.000000, -0.005000, 0.000000, -0.027500
+#*# 	  -0.077500, -0.065000, -0.060000, -0.067500, -0.065000, -0.070000, -0.082500
+#*# tension = 0.2
+#*# min_x = 40.0
+#*# algo = bicubic
+#*# y_count = 7
+#*# mesh_y_pps = 2
+#*# min_y = 40.0
+#*# x_count = 7
+#*# max_y = 259.96
+#*# mesh_x_pps = 2
+#*# max_x = 259.96
