--- a/macros/macros.cfg
+++ b/macros/macros.cfg
@@ -74,8 +74,24 @@ gcode:
 
     ##	Uncomment for 300 build
     #G0 X150 Y150 Z30 F3600
-    
- 
+
+[gcode_macro PARK_CENTERz15]
+gcode:
+  G0 X150 Y150 Z15 F3600 ; park above center of bed
+
+[gcode_macro PARK_CENTERz30]
+gcode:
+  G0 X150 Y150 Z30 F3600 ; park above center of bed
+
+[gcode_macro calibrate_the_z_endstop]
+gcode:
+    g28
+    QUAD_GANTRY_LEVEL
+    g28
+    PARK_CENTERz15
+    Z_ENDSTOP_CALIBRATE
+
+
 #--------------------------------------------------------------------
 [gcode_macro PRINT_START]
 gcode:
@@ -84,28 +100,29 @@ gcode:
   BED_MESH_CLEAR
   m104 s{175} ;get nozzle to 175 while the bed does its thing
   M190 S{BED}  ; Preheat bed  
+  CLEAN_NOZZLE
+  G28 z;REHOMEz
+  QUAD_GANTRY_LEVEL
+  g28 z;rerehomez
+  BED_MESH_CALIBRATE
   M109 S{EXTRUDER} ; preheat nozzle
   CLEAN_NOZZLE
-  G28;REHOME
-  QUAD_GANTRY_LEVEL
-  BED_MESH_CALIBRATE
-  CLEAN_NOZZLE
-  CALIBRATE_z
+  #CALIBRATE_z
 
 
-[gcode_macro PRINT_START_old]
-gcode:
-    G32                            ; home all axes
-    G1 Z25 F3000                   ; move nozzle up
-    BED_MESH_CLEAR
-    M190 S{BED}  ; Preheat bed
-    #M109 S{EXTRUDER} ; preheat nozzle
-    BED_MESH_CALIBRATE
-    #BED_MESH_PROFILE LOAD=default 
-    M109 S{EXTRUDER} ; preheat nozzle
-    CLEAN_NOZZLE
-    CALIBRATE_Z 
-    CLEAN_NOZZLE
+#[gcode_macro PRINT_START_old]
+#gcode:
+ #   G32                            ; home all axes
+#    G1 Z25 F3000                   ; move nozzle up
+#    BED_MESH_CLEAR
+ #   M190 S{BED}  ; Preheat bed
+#    #M109 S{EXTRUDER} ; preheat nozzle
+#    BED_MESH_CALIBRATE
+#    #BED_MESH_PROFILE LOAD=default 
+#    M109 S{EXTRUDER} ; preheat nozzle
+#    CLEAN_NOZZLE
+ #   CALIBRATE_Z 
+ #   CLEAN_NOZZLE
      
 
 [gcode_macro PRINT_END]
