--- a/macros/nozzle_scrub.cfg
+++ b/macros/nozzle_scrub.cfg
@@ -194,8 +194,8 @@ gcode:
    
       ## Clear from area.
       M117 Cleaned!
-      G1 Z{brush_top + clearance_z} F{prep_spd_z}
-      G1 X{bucket_left_width / 4} F{prep_spd_xy} 
+      G1 Z{10} F{prep_spd_z}
+      #G1 X{bucket_left_width / 4} F{prep_spd_xy} 
 
       ## Restore the gcode state to how it was before the macro.
       RESTORE_GCODE_STATE NAME=clean_nozzle
