--- a/OLD/printer-20211009_193616.cfg
+++ b/OLD/printer-20211009_193616.cfg
@@ -213,8 +213,7 @@ nozzle_diameter: 0.400
 filament_diameter: 1.75
 heater_pin: P2.7
 ##	Validate the following thermistor type to make sure it is correct
-#sensor_type: NTC 100K beta 3950
-sensor_type: Custom NTC100K B3950 # custom senseor for klipper fix
+sensor_type: NTC 100K beta 3950
 sensor_pin: P0.24
 min_temp: 10
 max_temp: 270
@@ -225,7 +224,7 @@ min_extrude_temp: 170
 #pid_ki = 1.304
 #pid_kd = 131.721
 ##	Try to keep pressure_advance below 1.0
-pressure_advance: 0.062
+pressure_advance: 0.082
 ##	Default is 0.040, leave stock
 pressure_advance_smooth_time: 0.040
 
@@ -268,7 +267,7 @@ timeout: 7200
 pin: ^z:P0.10
 x_offset: 0
 y_offset: 21.00
-#z_offset: 6.42
+z_offset: 6.42
 speed: 4
 lift_speed: 10.0
 samples:3
@@ -362,15 +361,6 @@ gcode:
 
 #--------------------------------------------------------------------
 
-[thermistor Custom NTC100K B3950]
-## values calibrated against a PT100 reference
-temperature1: 25.0
-resistance1: 103180.0
-temperature2: 150.0
-resistance2: 1366.2
-temperature3: 250.0
-resistance3: 168.6
-
 ## 	Thermistor Types
 ##   "EPCOS 100K B57560G104F"
 ##   "ATC Semitec 104GT-2"
@@ -399,23 +389,3 @@ resistance3: 168.6
 #*# pid_kd = 90.086
 #*#
 #*# [probe]
-#*# z_offset = 6.470
-#*#
-#*# [bed_mesh default]
-#*# version = 1
-#*# points =
-#*# 	  -0.047500, -0.030000, -0.015000, -0.022500, -0.032500
-#*# 	  -0.007500, 0.015000, 0.005000, -0.007500, -0.002500
-#*# 	  -0.025000, 0.010000, 0.000000, -0.017500, -0.027500
-#*# 	  -0.012500, 0.032500, 0.020000, 0.030000, 0.000000
-#*# 	  -0.075000, -0.050000, -0.025000, -0.037500, -0.042500
-#*# tension = 0.2
-#*# min_x = 40.0
-#*# algo = bicubic
-#*# y_count = 5
-#*# mesh_y_pps = 2
-#*# min_y = 40.0
-#*# x_count = 5
-#*# max_y = 260.0
-#*# mesh_x_pps = 2
-#*# max_x = 260.0
