--- a/macros/macros.cfg
+++ b/macros/macros.cfg
@@ -35,27 +35,19 @@ max_adjust: 10
 
 
 #[bed_mesh]
-#speed: 300
-#horizontal_move_z: 20
-#mesh_min: 40, 40
-#mesh_max: 260,260
-#fade_start: 0.6
-#fade_end: 10.0
 #probe_count: 5,5
-#algorithm: bicubic
 #relative_reference_index: 12
-
-
+#probe_count: 7,7
+#relative_reference_index: 24
 ##--------------------------------------------------------------------
-# Bed Mesh - meeasure thermal behavior
 [bed_mesh]
 speed: 300
 horizontal_move_z: 20
 mesh_min: 40,40
 mesh_max: 260,260
-probe_count: 7,7
+probe_count: 5,5
 mesh_pps: 2,2
-relative_reference_index: 24
+relative_reference_index: 12
 algorithm: bicubic
 bicubic_tension: 0.2
 move_check_distance: 3.0
