cleaniung up and improving macros

--- a/printer.cfg
+++ b/printer.cfg
@@ -3,7 +3,7 @@
 #####################################################################
 # 	Includes
 #####################################################################
-[include macros/*]
+[include macros/*.cfg]
 [include mainsail.cfg]
 
 [mcu]
