--- a/macros/moves.cfg
+++ b/macros/moves.cfg
@@ -6,7 +6,7 @@ gcode:
 gcode:
   G0 X150 Y150 Z30 F3600 ; park above center of bed
 
-[gcode_macro PARK_CENTER_z30_with_fans]
+[gcode_macro PARK_CENTER_fans]
 gcode:
   G0 X150 Y150 Z30 F3600 ; park above center of bed
   M106 S255 ; turn on part fans to heat faster
