--- a/macros/extrudeorpurge.cfg
+++ b/macros/extrudeorpurge.cfg
@@ -5,3 +5,24 @@ gcode:
     G1 E50 F300
     G1 E50 F300
     G1 E50 F300
+
+
+[gcode_macro purge_800]
+gcode:
+    M83
+    G1 E50 F300
+    G1 E50 F300
+    G1 E50 F300
+    G1 E50 F300
+    G1 E50 F300
+    G1 E50 F300
+    G1 E50 F300
+    G1 E50 F300
+    G1 E50 F300
+    G1 E50 F300
+    G1 E50 F300
+    G1 E50 F300
+    G1 E50 F300
+    G1 E50 F300
+    G1 E50 F300
+    G1 E50 F300
