--- a/macros/startfinish.cfg
+++ b/macros/startfinish.cfg
@@ -25,6 +25,7 @@ gcode:
   BED_MESH_CALIBRATE
   M109 S{EXTRUDER} ; preheat nozzle
   CLEAN_NOZZLE
+  M117 PRINTSTART
   #CALIBRATE_z
 
 
@@ -42,3 +43,4 @@ gcode:
     G90                            ; absolute positioning
     G0  X125 Y250 F3600            ; park nozzle at rear
     BED_MESH_CLEAR
+    M117 PRINTEND
