--- a/printer.cfg
+++ b/printer.cfg
@@ -302,22 +302,36 @@ kick_start_time: 0.5
 ##	if your fan is not able to slow down effectively
 off_below: 0.10
 
-[heater_fan controller_fan]
+[fan_generic controller_fan]
 ##	Controller fan - Z board, HE1 Connector
 pin: z:P2.4
-kick_start_time: 0.5
-heater: heater_bed
-heater_temp: 45.0
+#kick_start_time: 0.5
+#heater: heater_bed
+#heater_temp: 45.0
 
-[heater_fan exhaust_fan]
+[fan_generic exhaust_fan]
 ##	Exhaust fan - Z board, HE0 Connector
 pin: z:P2.7
 max_power: 1.0
 shutdown_speed: 0.0
 kick_start_time: 5.0
-heater: heater_bed
-heater_temp: 60
-fan_speed: .2
+#heater: heater_bed
+#heater_temp: 60
+#fan_speed: .2
+
+#####################################################################
+# Chamber Thermistor
+#####################################################################
+[temperature_sensor chamber_temp]
+sensor_type: NTC 100K beta 3950
+sensor_pin: P0.23
+
+#####################################################################
+# 	Hokey shit
+#####################################################################
+[verify_heater heater_bed]
+max_error: 140
+check_gain_time: 60
 
 #####################################################################
 # 	LED Control
