fixed syntax for new klipper

--- a/macros/startfinish.cfg
+++ b/macros/startfinish.cfg
@@ -11,19 +11,24 @@
 #--------------------------------------------------------------------
 [gcode_macro PRINT_START]
 gcode:
+ # Parameters
+    {% set bedtemp = params.BED|int %}
+    {% set hotendtemp = params.HOTEND|int %}
+    {% set chambertemp = params.CHAMBER|default(0)|int %}
+
   g28 ; home all
   G0 X150 Y150 Z30 F3600 ; park above center of bed
   M106 S255
   BED_MESH_CLEAR
   m104 s{175} ;get nozzle to 175 while the bed does its thing
-  M190 S{BED}  ; Preheat bed  
+  M190 S{bedtemp}  ; Preheat bed  
   M106 S001
   CLEAN_NOZZLE
   G28 z;REHOMEz
   QUAD_GANTRY_LEVEL
   g28 z;rerehomez
   BED_MESH_CALIBRATE
-  M109 S{EXTRUDER} ; preheat nozzle
+  M109 S{hotendtemp} ; preheat nozzle
   CLEAN_NOZZLE
   M117 PRINTSTART
   #CALIBRATE_z
