--- a/printer.cfg
+++ b/printer.cfg
@@ -213,8 +213,8 @@ nozzle_diameter: 0.400
 filament_diameter: 1.75
 heater_pin: P2.7
 ##	Validate the following thermistor type to make sure it is correct
-#sensor_type: NTC 100K beta 3950
-sensor_type: Custom NTC100K B3950 # custom senseor for klipper fix
+#sensor_type: 100K beta 3950
+sensor_type: Generic 3950
 sensor_pin: P0.24
 min_temp: 10
 max_temp: 270
@@ -323,7 +323,7 @@ kick_start_time: 5.0
 # Chamber Thermistor
 #####################################################################
 [temperature_sensor chamber_temp]
-sensor_type: NTC 100K beta 3950
+sensor_type: Generic 3950
 sensor_pin: P0.23
 
 #####################################################################
