messing with autoz

--- a/macros/startfinish.cfg
+++ b/macros/startfinish.cfg
@@ -30,8 +30,7 @@ gcode:
   BED_MESH_CALIBRATE
   M109 S{hotendtemp} ; preheat nozzle
   CLEAN_NOZZLE
-  M117 PRINTSTART
-  #CALIBRATE_z
+  zcalibration
 
 
 [gcode_macro PRINT_END]
