--- a/OLD/printer-20220419_120912.cfg
+++ b/OLD/printer-20220419_120912.cfg
@@ -39,15 +39,15 @@ square_corner_velocity: 5.0
 # 	X/Y Stepper Settings
 #####################################################################
 
-[stepper_y]
+[stepper_x]
 ##	Connected to X on mcu_xye (B Motor)
 step_pin: P2.2
-dir_pin: P2.6
+dir_pin: !P2.6
 enable_pin: !P2.1
 rotation_distance: 40
 microsteps: 16
 full_steps_per_rotation:400  #set to 400 for 0.9 degree stepper
-endstop_pin: P1.29
+endstop_pin: P1.28
 position_min: 0
 ##--------------------------------------------------------------------
 ##	Uncomment for 300mm build
@@ -59,7 +59,7 @@ homing_retract_dist: 5
 homing_positive_dir: true
 
 ##	Make sure to update below for your relevant driver (2208 or 2209)
-[tmc2209 stepper_y]
+[tmc2209 stepper_x]
 uart_pin: P1.10
 interpolate: True
 run_current: 0.8
@@ -67,7 +67,7 @@ hold_current: 0.7
 sense_resistor: 0.110
 stealthchop_threshold: 0
 
-[stepper_x]
+[stepper_y]
 ##	Connected to Y on mcu_xye (A Motor)
 step_pin: P0.19
 dir_pin: !P0.20
@@ -75,7 +75,7 @@ enable_pin: !P2.8
 rotation_distance: 40
 microsteps: 16
 full_steps_per_rotation:400  #set to 400 for 0.9 degree stepper
-endstop_pin: P1.28
+endstop_pin: P1.29
 position_min: 0
 ##--------------------------------------------------------------------
 ##	Uncomment for 300mm build
@@ -87,7 +87,7 @@ homing_retract_dist: 5
 homing_positive_dir: true
 
 ##	Make sure to update below for your relevant driver (2208 or 2209)
-[tmc2209 stepper_x]
+[tmc2209 stepper_y]
 uart_pin: P1.9
 interpolate: True
 run_current: 0.8
@@ -206,8 +206,8 @@ rotation_distance: 22.6789511	#Bondtech 5mm Drive Gears
 ##	Update Gear Ratio depending on your Extruder Type
 ##	Use 50:17 for Afterburner/Clockwork (BMG Gear Ratio)
 ##	Use 80:20 for M4, M3.1
-gear_ratio: 50:10				#BMG Gear Ratio
-microsteps: 32
+gear_ratio: 50:17				#BMG Gear Ratio
+microsteps: 16
 full_steps_per_rotation: 200	#200 for 1.8 degree, 400 for 0.9 degree
 nozzle_diameter: 0.400
 filament_diameter: 1.75
@@ -249,7 +249,7 @@ heater_pin: z:P2.3
 sensor_type: NTC 100K MGB18-104F39050L32
 sensor_pin: z:P0.25
 ##	Adjust Max Power so your heater doesn't warp your bed
-max_power: .9
+max_power: 0.6
 min_temp: 0
 max_temp: 120
 #control: pid
@@ -403,7 +403,7 @@ resistance3: 168.6
 #*# pid_kd = 387.956
 #*#
 #*# [stepper_z]
-#*# position_endstop = 1.503
+#*# position_endstop = -0.417
 #*#
 #*# [extruder]
 #*# control = pid
@@ -417,20 +417,18 @@ resistance3: 168.6
 #*# [bed_mesh default]
 #*# version = 1
 #*# points =
-#*# 	  -0.030000, -0.067500, -0.045000, -0.062500, -0.055000, -0.035000, -0.037500
-#*# 	  -0.002500, -0.025000, -0.030000, -0.032500, -0.047500, -0.025000, -0.015000
-#*# 	  0.022500, -0.005000, 0.000000, 0.000000, 0.007500, 0.000000, 0.007500
-#*# 	  0.025000, 0.007500, 0.000000, -0.015000, -0.027500, -0.005000, 0.012500
-#*# 	  0.070000, 0.035000, 0.012500, -0.020000, -0.002500, -0.000000, 0.007500
-#*# 	  0.007500, -0.030000, -0.035000, -0.037500, -0.040000, -0.020000, -0.025000
-#*# 	  -0.050000, -0.050000, -0.075000, -0.080000, -0.062500, -0.070000, -0.042500
+#*# 	  -0.047500, -0.030000, -0.015000, -0.022500, -0.032500
+#*# 	  -0.007500, 0.015000, 0.005000, -0.007500, -0.002500
+#*# 	  -0.025000, 0.010000, 0.000000, -0.017500, -0.027500
+#*# 	  -0.012500, 0.032500, 0.020000, 0.030000, 0.000000
+#*# 	  -0.075000, -0.050000, -0.025000, -0.037500, -0.042500
 #*# tension = 0.2
 #*# min_x = 40.0
 #*# algo = bicubic
-#*# y_count = 7
+#*# y_count = 5
 #*# mesh_y_pps = 2
 #*# min_y = 40.0
-#*# x_count = 7
-#*# max_y = 259.96
+#*# x_count = 5
+#*# max_y = 260.0
 #*# mesh_x_pps = 2
-#*# max_x = 259.96
+#*# max_x = 260.0
