--- a/OLD/printer-20230205_195009.cfg
+++ b/OLD/printer-20230205_195009.cfg
@@ -249,7 +249,7 @@ heater_pin: z:P2.3
 sensor_type: NTC 100K MGB18-104F39050L32
 sensor_pin: z:P0.25
 ##	Adjust Max Power so your heater doesn't warp your bed
-max_power: .9
+max_power: 0.6
 min_temp: 0
 max_temp: 120
 #control: pid
@@ -403,7 +403,7 @@ resistance3: 168.6
 #*# pid_kd = 387.956
 #*#
 #*# [stepper_z]
-#*# position_endstop = 1.503
+#*# position_endstop = -0.267
 #*#
 #*# [extruder]
 #*# control = pid
@@ -417,20 +417,18 @@ resistance3: 168.6
 #*# [bed_mesh default]
 #*# version = 1
 #*# points =
-#*# 	  -0.030000, -0.067500, -0.045000, -0.062500, -0.055000, -0.035000, -0.037500
-#*# 	  -0.002500, -0.025000, -0.030000, -0.032500, -0.047500, -0.025000, -0.015000
-#*# 	  0.022500, -0.005000, 0.000000, 0.000000, 0.007500, 0.000000, 0.007500
-#*# 	  0.025000, 0.007500, 0.000000, -0.015000, -0.027500, -0.005000, 0.012500
-#*# 	  0.070000, 0.035000, 0.012500, -0.020000, -0.002500, -0.000000, 0.007500
-#*# 	  0.007500, -0.030000, -0.035000, -0.037500, -0.040000, -0.020000, -0.025000
-#*# 	  -0.050000, -0.050000, -0.075000, -0.080000, -0.062500, -0.070000, -0.042500
+#*# 	  -0.057500, -0.035000, -0.032500, -0.032500, -0.050000
+#*# 	  -0.022500, 0.017500, 0.017500, 0.002500, -0.035000
+#*# 	  -0.017500, 0.005000, 0.000000, -0.007500, -0.037500
+#*# 	  0.000000, 0.030000, 0.037500, 0.030000, -0.007500
+#*# 	  -0.072500, -0.027500, -0.022500, -0.045000, -0.052500
 #*# tension = 0.2
 #*# min_x = 40.0
 #*# algo = bicubic
-#*# y_count = 7
+#*# y_count = 5
 #*# mesh_y_pps = 2
 #*# min_y = 40.0
-#*# x_count = 7
-#*# max_y = 259.96
+#*# x_count = 5
+#*# max_y = 260.0
 #*# mesh_x_pps = 2
-#*# max_x = 259.96
+#*# max_x = 260.0
