--- a/macros/startfinish.cfg
+++ b/macros/startfinish.cfg
@@ -13,14 +13,12 @@
 gcode:
  # Parameters
     {% set bedtemp = params.BED|int %}
-    {% set hotendtemp = params.HOTEND|int %}
+    {% set hotendtemp = params.EXTRUDER|int %}
     {% set chambertemp = params.CHAMBER|default(0)|int %}
 
   g28 ; home all
-  G0 X150 Y150 Z30 F3600 ; park above center of bed
-  M106 S255
   BED_MESH_CLEAR
-  m104 s{175} ;get nozzle to 175 while the bed does its thing
+  m104 s{150} ;get nozzle to 150 while the bed does its thing
   M190 S{bedtemp}  ; Preheat bed  
   M106 S001
   CLEAN_NOZZLE
@@ -30,7 +28,7 @@ gcode:
   BED_MESH_CALIBRATE
   M109 S{hotendtemp} ; preheat nozzle
   CLEAN_NOZZLE
-  zcalibration
+#  zcalibration
 
 
 [gcode_macro PRINT_END]
@@ -40,10 +38,9 @@ gcode:
     G92 E0                         ; zero the extruder
     G1 E-10.0 F3600                ; retract filament
     G91                            ; relative positioning
-    G0 Z1.00 X20.0 Y20.0 F20000    ; move nozzle to remove stringing
     TURN_OFF_HEATERS
     M107                           ; turn off fan
-    G1 Z2 F3000                    ; move nozzle up 2mm
+    G1 Z20 F3000                    ; move nozzle up 20mm
     G90                            ; absolute positioning
     G0  X125 Y250 F3600            ; park nozzle at rear
     BED_MESH_CLEAR
